# notes-cli

./: README.md  pyproject.toml  requirements.txt
notes/: __init__.py  cli.py  config.py  models.py  template.py
notes/templates/: tag.css
tests/: test_cli.py
