[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notes-cli"
version = "0.0.1"
description = 'Manage markdown notes'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["writing"]
authors = [{ name = "Tugrul Ates", email = "me@tugrulates.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python",
  "Environment :: Console",
  "Topic :: Text Processing :: Markup :: Markdown",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "Jinja2==3.1.2",
  "markdown-it-py[plugins]==2.2.0",
  "pydantic==1.10.6",
  "PyYAML==6.0",
  "rich==12.6.0",
  "typer[all]==0.7.0",
]

[project.scripts]
notes = "notes.cli:app"

[project.urls]
Homepage = "https://github.com/tugrulates/notes-cli"

[tool.hatch.build]
artifacts = [
  "notes/templates/**",
]

[tool.hatch.envs.dev]
dependencies = [
  "bandit[toml]==1.7.4",
  "black==22.12.0",
  "flake8-bugbear==22.12.6",
  "flake8-builtins==2.1.0",
  "flake8-comprehensions==3.10.1",
  "flake8-docstrings==1.6.0",
  "flake8-encodings[classes]==0.5.0.post1",
  "flake8-return==1.2.0",
  "flake8-simplify==0.19.3",
  "flake8==6.0.0",
  "isort==5.11.4",
  "mypy==0.991",
  "pep8-naming==0.13.3",
  "pytest==7.2.0",
  "types-PyYAML==6.0.12.2",
]

[tool.hatch.envs.test]
dependencies = [
  "pytest-cov==4.0.0",
  "pytest==7.2.0",
]

[tool.hatch.envs.default.scripts]
lint = [
  "flake8 .",
  "mypy . --check-untyped-defs",
  "bandit -qr -c pyproject.toml .",
  "black . --check --diff",
  "isort . --check-only --diff",
]
fmt = [
  "isort .",
  "black .",
  "check",
]
test = [
  "pytest -v",
]
cov = [
  "pytest -v --cov notes --cov-report xml --cov-fail-under=80",
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mypy]
strict = true

[tool.isort]
profile = "black"
